--- a/res/layout/activity_delete.xml
+++ b/res/layout/activity_delete.xml
@@ -27,9 +27,9 @@
 
             <TextView
                 android:id="@+id/Cartoon"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Cartoon" />
+                android:text="Cartoon:" />
 
             <TextView
                 android:id="@+id/CartoonName"
@@ -40,7 +40,7 @@
 
         <TableRow
             android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content" >
 
             <TextView
@@ -58,7 +58,7 @@
 
         <TableRow
             android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content" >
 
             <TextView
