--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -48,7 +48,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/bDelete"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        android:choiceMode="singleChoice" >
+
     </ListView>
 
 </RelativeLayout>
